# Dressage

./: .dockerignore  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: docker.yml
blackbox_server/: app.py  config.py  main.py  pyproject.toml
blackbox_server/adapters/: base.py  claude_code.py  factory.py  openclaw.py  opencode.py
blackbox_server/api/: __init__.py  health.py  rollout.py  sessions.py
blackbox_server/core/: command.py  errors.py  hashing.py  models.py  monitoring.py  server.py
blackbox_server/proxy/: rollout_llm_proxy.py
blackbox_server/runtime/: paths.py
blackbox_server/store/: __init__.py  session_store.py
docker/: Dockerfile  README.md  build.sh  image_tag.sh  run.sh
docs/: blackbox-server.md  paddock.md  proxy.md  quickstart.md  recipes.md  rollout.md  sandbox.md  training.md
dressage/: __init__.py
dressage/config/: __init__.py  config.py
dressage/paddock/: __init__.py  factory.py  interface.py  lifecycle.py
dressage/proxy/: __init__.py  generation_controller.py  proxy_client.py  reasoning_parser.py  server.py  session_manager.py  sglang_client.py  tool_call_ids.py  tool_call_parser.py  trajectory_store.py
dressage/recipes/: __init__.py
dressage/reward/: __init__.py  custom_rm.py  helpers.py  registry.py
dressage/rollout/: convert_samples.py  data_source.py  fully_async_rollout.py  log_rollout.py  multi_segment.py  partial_async_rollout.py  sync_rollout.py
dressage/sandbox/: __init__.py  factory.py  provider.py  types.py
dressage/training/: log_helpers.py  reward_post_process.py  train_async_with_rollout_pause.py
examples/data/: dressage_dapo_prompts.jsonl  dressage_dapo_prompts_e2b.jsonl
examples/scripts/: run_alfworld_qwen3.5_4b.sh  run_alfworld_qwen3.5_4b_async.sh  (+8 more)
tests/: conftest.py  test_blackbox_dispatch.py  test_blackbox_dispatch_multi_segment.py  test_blackbox_node_supervisor.py  test_config.py  test_convert_samples_multi_segment.py  test_custom_rm.py  test_data_source.py  test_docker_release.py  test_fully_async_rollout.py  test_log_rollout_data.py  test_multi_segment.py  test_new_paddock_layers.py  test_paddock_blackbox_defaults.py  test_paddock_multi_segment.py  test_partial_async_rollout.py  test_proxy.py  test_ray_blackbox_scheduler.py  test_resume_readiness_simple.py  test_reward_post_process_multi_segment.py  test_reward_registry.py  test_rollout_helper_modules.py  test_sandbox_provider_layer.py  test_sandbox_runner.py  test_session_manager_cleanup.py  test_slime_compat.py  test_slot_archives.py  test_tito.py
(+58 files in other folders)
