[project]
name = "dressage"
version = "0.1.0"
description = "Agentic Reinforcement Learning training framework built on slime"
requires-python = ">=3.10"
dependencies = [
    "e2b",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "ray==2.55.1",
    "uvicorn>=0.30.0,<1.0.0",
    "transformers==5.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
dressage-proxy = "dressage.proxy.server:main"
dressage-local-bwrap-start = "dressage.sandbox.scripts.start_local_bwrap:main"
dressage-local-bwrap-status = "dressage.sandbox.scripts.local_bwrap_status:main"
dressage-local-bwrap-stop = "dressage.sandbox.scripts.stop_local_bwrap:main"
dressage-local-blackbox-start = "dressage.sandbox.scripts.start_blackbox_cluster:main"
dressage-local-blackbox-status = "dressage.sandbox.scripts.blackbox_cluster_status:main"
dressage-local-blackbox-stop = "dressage.sandbox.scripts.stop_blackbox_cluster:main"
dressage-blackbox-start = "dressage.sandbox.scripts.start_blackbox_cluster:main"
dressage-blackbox-status = "dressage.sandbox.scripts.blackbox_cluster_status:main"
dressage-blackbox-stop = "dressage.sandbox.scripts.stop_blackbox_cluster:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dressage*"]
