[project]
name = "dressage-blackbox-server"
version = "1.0.0"
description = "Standalone BlackboxServer HTTP adapter service for Dressage blackbox rollouts"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
blackbox-server = "blackbox_server.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "blackbox_server",
    "blackbox_server.adapters",
    "blackbox_server.api",
    "blackbox_server.core",
    "blackbox_server.proxy",
    "blackbox_server.runtime",
    "blackbox_server.store",
]

[tool.setuptools.package-dir]
blackbox_server = "."
"blackbox_server.adapters" = "adapters"
"blackbox_server.api" = "api"
"blackbox_server.core" = "core"
"blackbox_server.proxy" = "proxy"
"blackbox_server.runtime" = "runtime"
"blackbox_server.store" = "store"
